tests/files/lexer_tests/should_fail/038.cmdr
// Illegal character in variable name (ascii 5)
myvar = 5;